# PC-MSDM

./: .gitignore  CMakeLists.txt  Install.md  LICENSE.md  PointSet.h  README.md  main.cpp  utilities.h
example/: horse_original.xyz  horse_watermarking_Cho.xyz  pc_msdm  pc_msdm_b
